--- a/index.html
+++ b/index.html
@@ -1,81 +1,55 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Ricardo Zaal</title>
-  <meta name="description" content="Ricardo Zaal — faith, purpose, vision. Helping people discover calling, rebuild income through business, and restore dignity with bold action." />
-  <meta name="theme-color" content="#0f353a" />
+
+  <title>Ricardo Zaal — Faith, Purpose & Legacy</title>
+  <meta name="description" content="I help Kingdom-minded people rebuild their lives and income through business and calling — restoring dignity with bold action.">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://www.ricardozaal.com/" />
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Ricardo Zaal — Faith, Purpose & Legacy">
+  <meta property="og:description" content="Helping people discover calling, rebuild income, and restore dignity through faith and action.">
+  <meta property="og:url" content="https://www.ricardozaal.com/">
+  <meta property="og:image" content="https://www.ricardozaal.com/og-image.jpg"> <!-- replace later -->
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Ricardo Zaal — Faith, Purpose & Legacy">
+  <meta name="twitter:description" content="Helping people discover calling, rebuild income, and restore dignity through faith and action.">
+  <meta name="twitter:image" content="https://www.ricardozaal.com/og-image.jpg"> <!-- replace later -->
+
+  <!-- Brand color for mobile UI -->
+  <meta name="theme-color" content="#08c4c9">
+
+  <!-- JSON-LD: Person (helps Google understand YOU) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Ricardo Zaal",
+    "url": "https://www.ricardozaal.com/",
+    "email": "mailto:info@ricardozaal.com",
+    "jobTitle": "Kingdom Builder, Coach, Pastor",
+    "sameAs": [
+      "https://www.facebook.com/ricardozaal",
+      "https://www.tiktok.com/@ricardodzaal",
+      "https://www.instagram.com/ricardo.zaal",
+      "https://fountaingrace.org",
+      "https://seed.impactseed.co.za"
+    ]
+  }
+  </script>
+
   <style>
-    :root{
-      --bg1:#07292d; --bg2:#0e3a40; --card:#10383e; --muted:#9bd9d4;
-      --text:#e8fbf9; --text-dim:#bfeae6; --accent:#1fd3c1; --accent-2:#18a79a;
-      --shadow:0 20px 40px rgba(0,0,0,.35);
-      --radius:18px;
-    }
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0; font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial;
-      color:var(--text); background:radial-gradient(1000px 700px at 70% -10%, #154f56 0%, transparent 60%) ,linear-gradient(180deg,var(--bg1),var(--bg2));
-      -webkit-font-smoothing:antialiased; text-rendering:optimizeLegibility;
-    }
-    a{color:var(--accent); text-decoration:none}
-    a:hover{color:#9ff1ea}
-    .wrap{max-width:1050px; margin:0 auto; padding:22px}
-    header{padding:80px 0 26px; text-align:center}
-    h1{font-size:56px; line-height:1.05; margin:0 0 14px; letter-spacing:.5px}
-    .lead{max-width:920px; margin:0 auto 28px; color:var(--text-dim); font-size:20px}
-    .cta-row{display:flex; gap:16px; justify-content:center; flex-wrap:wrap}
-    .btn{
-      padding:14px 22px; border-radius:14px; font-weight:700; letter-spacing:.2px; cursor:pointer;
-      border:1px solid #1a4b50; color:var(--text); transition:.2s ease; box-shadow:var(--shadow);
-      background:linear-gradient(180deg,#155559,#0f3c41);
-    }
-    .btn:hover{transform:translateY(-1px); filter:saturate(115%)}
-    .btn.alt{background:transparent; border-color:#2a666d}
-    .btn.primary{background:linear-gradient(180deg,var(--accent),#12b9aa); color:#05302e; border-color:#0fb9aa}
-    .btn.primary:hover{filter:saturate(120%)}
-
-    /* cards */
-    .card{
-      background:linear-gradient(180deg,#0d3438,#0f3a40);
-      border:1px solid #18494f; border-radius:var(--radius); box-shadow:var(--shadow);
-      padding:28px; margin:28px auto; max-width:980px;
-    }
-    .card h2{margin:0 0 14px; font-size:32px}
-    .card p{margin:10px 0; color:var(--text-dim); font-size:18px}
-
-    /* connect grid */
-    .grid{display:grid; grid-template-columns:repeat(3,minmax(0,1fr)); gap:22px}
-    .stat{
-      background:#0e3337; border:1px solid #18494f; border-radius:14px; padding:18px;
-    }
-    .stat b{display:block; margin-bottom:4px; color:var(--muted)}
-    .muted{color:var(--text-dim)}
-
-    /* floating social bar */
-    .fab{
-      position:fixed; right:18px; top:120px; display:flex; flex-direction:column; gap:12px; z-index:10;
-    }
-    .fab a{
-      width:48px; height:48px; display:grid; place-items:center; border-radius:14px;
-      background:linear-gradient(180deg,#0f3a40,#0b2e32); border:1px solid #1c535a; box-shadow:var(--shadow);
-      transition:.18s ease; color:var(--text);
-    }
-    .fab a:hover{transform:translateY(-2px); background:linear-gradient(180deg,#145159,#0f3a40)}
-    .fab svg{width:22px; height:22px; fill:var(--muted)}
-
-    footer{color:#92cbc7; text-align:center; padding:24px 0 60px}
-
-    /* responsive */
-    @media (max-width:840px){
-      h1{font-size:44px}
-      .grid{grid-template-columns:1fr}
-      .fab{right:12px; top:auto; bottom:18px; flex-direction:row}
-    }
+    /* keep your existing CSS here (unchanged) */
   </style>
 </head>
+
 <body>
   <!-- Floating socials -->
   <nav class="fab" aria-label="Social shortcuts">
