--- a/index.html
+++ b/index.html
@@ -1,163 +1,247 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- Essentials -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Ricardo Zaal — Faith, Purpose & Bold Action</title>
+  <meta name="description" content="Ricardo Zaal helps people discover calling, rebuild income through business, and restore dignity with bold, Kingdom-minded action." />
+  <link rel="canonical" href="https://ricardozaal.com/" />
 
-  <title>Ricardo Zaal — Faith, Purpose & Legacy</title>
-  <meta name="description" content="I help Kingdom-minded people rebuild their lives and income through business and calling — restoring dignity with bold action.">
-
-  <!-- Canonical -->
-  <link rel="canonical" href="https://www.ricardozaal.com/" />
-
-  <!-- Open Graph -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Ricardo Zaal — Faith, Purpose & Legacy">
-  <meta property="og:description" content="Helping people discover calling, rebuild income, and restore dignity through faith and action.">
-  <meta property="og:url" content="https://www.ricardozaal.com/">
-  <meta property="og:image" content="https://www.ricardozaal.com/og-image.jpg"> <!-- replace later -->
+  <!-- Open Graph / Social -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ricardozaal.com/" />
+  <meta property="og:title" content="Ricardo Zaal — Faith, Purpose & Bold Action" />
+  <meta property="og:description" content="Discover calling, rebuild income through business, and restore dignity with bold action." />
+  <!-- If you later host a preview image, update the URL below -->
+  <meta property="og:image" content="https://ricardozaal.com/og-image.jpg" />
 
   <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Ricardo Zaal — Faith, Purpose & Legacy">
-  <meta name="twitter:description" content="Helping people discover calling, rebuild income, and restore dignity through faith and action.">
-  <meta name="twitter:image" content="https://www.ricardozaal.com/og-image.jpg"> <!-- replace later -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Ricardo Zaal — Faith, Purpose & Bold Action" />
+  <meta name="twitter:description" content="Discover calling, rebuild income through business, and restore dignity with bold action." />
+  <meta name="twitter:image" content="https://ricardozaal.com/og-image.jpg" />
 
-  <!-- Brand color for mobile UI -->
-  <meta name="theme-color" content="#08c4c9">
+  <!-- Robots -->
+  <meta name="robots" content="index,follow" />
 
-  <!-- JSON-LD: Person (helps Google understand YOU) -->
+  <!-- JSON‑LD (Person + sameAs) -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "Person",
     "name": "Ricardo Zaal",
-    "url": "https://www.ricardozaal.com/",
-    "email": "mailto:info@ricardozaal.com",
-    "jobTitle": "Kingdom Builder, Coach, Pastor",
+    "url": "https://ricardozaal.com/",
+    "description": "A voice of faith, purpose, and vision — helping people discover calling, rebuild income through business, and restore dignity with bold action.",
+    "email": "info@ricardozaal.com",
     "sameAs": [
       "https://www.facebook.com/ricardozaal",
       "https://www.tiktok.com/@ricardodzaal",
       "https://www.instagram.com/ricardo.zaal",
-      "https://fountaingrace.org",
-      "https://seed.impactseed.co.za"
+      "https://seed.impactseed.co.za",
+      "https://fountaingrace.org"
     ]
   }
   </script>
 
+  <!-- Style: simple + responsive, no external deps -->
   <style>
-    /* keep your existing CSS here (unchanged) */
+    :root{
+      --bg1:#0d1b2a; /* deep navy */
+      --bg2:#0f3460; /* rich blue */
+      --teal:#1dd3bd; /* turquoise accent */
+      --text:#eef6ff;
+      --muted:#b8c7e0;
+      --btn:#ffd166; /* warm CTA */
+      --btnText:#171717;
+      --card:#0f1f36cc;
+      --shadow: 0 10px 30px rgba(0,0,0,.25);
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji","Segoe UI Emoji", "Segoe UI Symbol";
+      color:var(--text);
+      background: radial-gradient(1200px 700px at 70% 20%, #10355a 0%, transparent 60%),
+                  radial-gradient(900px 600px at 20% 80%, #0a223d 0%, transparent 60%),
+                  linear-gradient(135deg,var(--bg1),var(--bg2));
+    }
+
+    /* Header/Hero */
+    header{
+      min-height:80vh;
+      display:grid;
+      place-items:center;
+      text-align:center;
+      padding:6rem 1.25rem 3rem;
+      position:relative;
+      overflow:hidden;
+    }
+    header::after{
+      /* soft teal glow */
+      content:"";
+      position:absolute; inset:auto -20% -35% -20%;
+      height:55vh;
+      background: radial-gradient(closest-side, rgba(29,211,189,.25), transparent 70%);
+      filter: blur(30px);
+      pointer-events:none;
+    }
+    .brand{
+      display:inline-flex; gap:.6rem; align-items:center;
+      font-weight:800; letter-spacing:.4px; color:var(--teal);
+      text-transform:uppercase; font-size:.9rem;
+    }
+    .hero{
+      max-width:900px;
+      margin-inline:auto;
+      position:relative;
+      z-index:1;
+    }
+    .hero h1{
+      margin:.25rem 0 1rem;
+      font-size:clamp(2rem, 5vw + .5rem, 4rem);
+      line-height:1.05;
+      letter-spacing:.5px;
+    }
+    .tag{
+      color:var(--muted);
+      max-width:780px;
+      margin:.75rem auto 2rem;
+      font-size:clamp(1rem, .9rem + .4vw, 1.15rem);
+    }
+    .cta{
+      display:flex; gap:.8rem; justify-content:center; flex-wrap:wrap;
+    }
+    .btn{
+      appearance:none;
+      border:none;
+      border-radius:12px;
+      padding:.9rem 1.2rem;
+      font-weight:700; letter-spacing:.2px;
+      cursor:pointer;
+      transition:transform .08s ease, filter .2s ease, box-shadow .2s ease;
+      box-shadow:var(--shadow);
+      text-decoration:none; display:inline-flex; align-items:center; gap:.5rem;
+    }
+    .btn.primary{ background:var(--btn); color:var(--btnText);}
+    .btn.secondary{ background:#11243f; color:var(--text); border:1px solid #1b3a62;}
+    .btn:hover{ transform:translateY(-2px); filter:saturate(1.05);}
+    .btn:active{ transform:translateY(0);}
+
+    /* Sections */
+    section{ padding:4rem 1.25rem; }
+    .wrap{ max-width:1000px; margin:0 auto; }
+    .card{
+      background:var(--card);
+      border:1px solid #1a3358;
+      border-radius:16px;
+      padding:1.5rem;
+      box-shadow:var(--shadow);
+    }
+    h2{ margin:0 0 1rem; font-size:1.6rem;}
+    p{ margin:.5rem 0 1rem; color:var(--muted); }
+
+    .links{
+      display:grid;
+      grid-template-columns:repeat(auto-fit, minmax(230px,1fr));
+      gap:12px;
+      margin-top:.75rem;
+    }
+    .link{
+      background:#0f223c;
+      border:1px solid #18365f;
+      color:var(--text);
+      text-decoration:none;
+      padding: .9rem 1rem;
+      border-radius:12px;
+      display:flex; align-items:center; justify-content:space-between;
+      transition:transform .08s ease, background .2s ease, border-color .2s ease;
+    }
+    .link:hover{ transform:translateY(-1px); background:#112a4a; border-color:#21518b; }
+
+    footer{
+      color:#94a7c6;
+      padding:2.5rem 1.25rem 4rem;
+      text-align:center;
+    }
+    small a{ color:var(--teal); text-decoration:none; }
+    small a:hover{ text-decoration:underline; }
+
+    /* Skip-link for a11y */
+    .skip{ position:absolute; left:-9999px; top:auto; width:1px; height:1px; overflow:hidden; }
+    .skip:focus{ left:1rem; top:1rem; width:auto; height:auto; background:#000; color:#fff; padding:.5rem .75rem; border-radius:6px; z-index:5;}
   </style>
 </head>
-
 <body>
-  <!-- Floating socials -->
-  <nav class="fab" aria-label="Social shortcuts">
-    <a href="https://www.facebook.com/ricardozaal" target="_blank" aria-label="Facebook" rel="noopener">
-      <svg viewBox="0 0 24 24"><path d="M22 12.07C22 6.48 17.52 2 11.93 2S2 6.48 2 12.07c0 5.02 3.66 9.19 8.44 9.93v-7.02H7.9V12.1h2.54V9.86c0-2.5 1.49-3.88 3.77-3.88 1.09 0 2.23.2 2.23.2v2.46h-1.25c-1.23 0-1.61.76-1.61 1.55v1.9h2.74l-.44 2.88h-2.3V22c4.78-.74 8.44-4.91 8.44-9.93z"/></svg>
-    </a>
-    <a href="https://www.tiktok.com/@ricardodzaal" target="_blank" aria-label="TikTok" rel="noopener">
-      <svg viewBox="0 0 24 24"><path d="M21 8.5a7.5 7.5 0 0 1-4.6-1.6v7.3a5.7 5.7 0 1 1-4.8-5.6v2.65a3.05 3.05 0 1 0 2.1 2.91V2h2.67a4.8 4.8 0 0 0 4.63 3.44V8.5Z"/></svg>
-    </a>
-    <a href="https://www.instagram.com/ricardo.zaal" target="_blank" aria-label="Instagram" rel="noopener">
-      <svg viewBox="0 0 24 24"><path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5Zm0 2a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3H7Zm5 3.5A5.5 5.5 0 1 1 6.5 13 5.5 5.5 0 0 1 12 7.5Zm0 2A3.5 3.5 0 1 0 15.5 13 3.5 3.5 0 0 0 12 9.5ZM18 6.2a1 1 0 1 1-1 1 1 1 0 0 1 1-1Z"/></svg>
-    </a>
-    <a href="mailto:info@ricardozaal.com" aria-label="Email">
-      <svg viewBox="0 0 24 24"><path d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2Zm0 4-8 5L4 8V6l8 5 8-5v2Z"/></svg>
-    </a>
-    <a href="https://wa.me/27618560854" target="_blank" aria-label="WhatsApp" rel="noopener">
-      <svg viewBox="0 0 24 24"><path d="M20 3.9A10 10 0 0 0 3.2 17.4L2 22l4.7-1.2A10 10 0 1 0 20 3.9ZM12 20a8 8 0 0 1-4.1-1.1l-.3-.2-2.8.7.7-2.7-.2-.3A8 8 0 1 1 12 20Zm3.9-5.8c-.2-.1-1.1-.5-1.3-.6-.2-.1-.4-.1-.5.1-.2.2-.6.7-.7.8-.1.1-.3.1-.5 0-1-.4-1.9-1.1-2.6-1.9-.2-.2-.4-.5-.1-.7.1-.1.2-.3.3-.4.1-.1.1-.2.2-.4.1-.2.1-.3 0-.5s-.5-1.1-.7-1.5c-.2-.4-.4-.4-.5-.4h-.4c-.2 0-.5.1-.7.3-.3.3-1 1-1 2.4s1 2.8 1.2 3c.2.3 2 3.1 5 4 .7.2 1.2.4 1.6.5.7.2 1.3.2 1.8.1.6-.1 1.1-.5 1.2-1 .2-.6.2-1 .1-1.1-.1-.1-.2-.1-.4-.2Z"/></svg>
-    </a>
-    <a href="https://t.me/+27618560854" target="_blank" aria-label="Telegram" rel="noopener">
-      <svg viewBox="0 0 24 24"><path d="M9.04 16.65 9.2 13l7.48-6.73c.34-.31-.08-.45-.52-.21L7.87 12.1 4.3 10.98c-.77-.24-.78-.76.16-1.15L19.4 4.1c.7-.32 1.36.17 1.09 1.25l-2.6 12.25c-.18.86-.73 1.07-1.47.67l-4.05-2.99-1.95 1.84c-.22.22-.41.41-.8.41Z"/></svg>
-    </a>
-  </nav>
+  <a class="skip" href="#about">Skip to content</a>
 
-  <main class="wrap">
-    <header id="top">
-      <h1>Ricardo Zaal</h1>
-      <p class="lead">
-        A voice of faith, purpose, and vision — helping people discover calling, rebuild income
-        through business, and restore dignity with bold action.
+  <header>
+    <div class="hero">
+      <div class="brand">Ricardo Zaal</div>
+      <h1>Faith. Purpose. Vision.<br/>Bold Action.</h1>
+      <p class="tag">
+        I help Kingdom‑minded people discover their calling, rebuild income through business, and
+        restore dignity — without begging for blessings. We build with wisdom, courage, and daily action.
       </p>
 
-      <div class="cta-row">
-        <a class="btn alt" href="#about">Learn More</a>
-        <a class="btn" href="#contact">Contact</a>
-        <a class="btn primary" href="https://seed.impactseed.co.za" target="_blank" rel="noopener">Start with Impact Seed</a>
+      <div class="cta">
+        <a class="btn primary" href="#about" aria-label="Learn more about Ricardo">Learn More</a>
+        <a class="btn secondary" href="#contact" aria-label="Contact Ricardo">Contact</a>
       </div>
-    </header>
+    </div>
+  </header>
 
-    <section id="about" class="card">
-      <h2>About Ricardo</h2>
-      <p>
-        I help <b>Kingdom-minded people</b> rebuild their lives and income through business and
-        calling — not begging for blessings, but building with wisdom, courage, and dignity.
-        If you’re ready to align faith with practical action and legacy, you’re in the right place.
-      </p>
-      <p class="muted">Prefer church resources? Visit
-        <a href="https://fountaingrace.org" target="_blank" rel="noopener">fountaingrace.org</a>.
-      </p>
-    </section>
+  <main id="about">
+    <section>
+      <div class="wrap">
+        <div class="card">
+          <h2>About Ricardo</h2>
+          <p>
+            If you’re ready to align calling, cashflow, and character — you’re in the right place.
+            Prefer church resources? Visit <a href="https://fountaingrace.org" target="_blank" rel="noopener">fountaingrace.org</a>.
+          </p>
 
-    <section class="card" aria-labelledby="links">
-      <h2 id="links">Quick Links</h2>
-      <div class="grid">
-        <a class="stat" href="https://www.facebook.com/ricardozaal" target="_blank" rel="noopener">
-          <b>Facebook</b><span class="muted">@ricardozaal</span>
-        </a>
-        <a class="stat" href="https://www.tiktok.com/@ricardodzaal" target="_blank" rel="noopener">
-          <b>TikTok</b><span class="muted">@ricardodzaal</span>
-        </a>
-        <a class="stat" href="https://www.instagram.com/ricardo.zaal" target="_blank" rel="noopener">
-          <b>Instagram</b><span class="muted">@ricardo.zaal</span>
-        </a>
-        <a class="stat" href="https://seed.impactseed.co.za" target="_blank" rel="noopener">
-          <b>Impact Seed</b><span class="muted">seed.impactseed.co.za</span>
-        </a>
-        <a class="stat" href="https://fountaingrace.org" target="_blank" rel="noopener">
-          <b>Fountain of Grace</b><span class="muted">fountaingrace.org</span>
-        </a>
-        <a class="stat" href="#contact">
-          <b>Contact</b><span class="muted">Email • WhatsApp • Telegram</span>
-        </a>
+          <h3 style="margin-top:1.25rem">Quick Links</h3>
+          <div class="links" aria-label="Quick links">
+            <a class="link" href="https://www.facebook.com/ricardozaal" target="_blank" rel="noopener" aria-label="Facebook">Facebook<span>↗</span></a>
+            <a class="link" href="https://www.tiktok.com/@ricardodzaal" target="_blank" rel="noopener" aria-label="TikTok">@ricardodzaal<span>↗</span></a>
+            <a class="link" href="https://www.instagram.com/ricardo.zaal" target="_blank" rel="noopener" aria-label="Instagram">@ricardo.zaal<span>↗</span></a>
+            <a class="link" href="https://seed.impactseed.co.za" target="_blank" rel="noopener" aria-label="Start with Impact Seed">Start with Impact Seed<span>↗</span></a>
+            <a class="link" href="https://fountaingrace.org" target="_blank" rel="noopener" aria-label="Fountain of Grace">Fountain of Grace<span>↗</span></a>
+          </div>
+        </div>
       </div>
     </section>
 
-    <section id="contact" class="card">
-      <h2>Let’s Connect</h2>
-      <p class="muted">Choose what’s easiest for you:</p>
-      <div class="grid">
-        <div class="stat">
-          <b>Email</b>
-          <a href="mailto:info@ricardozaal.com">info@ricardozaal.com</a>
-        </div>
-        <div class="stat">
-          <b>WhatsApp</b>
-          <a href="https://wa.me/27618560854" target="_blank" rel="noopener">+27 61 856 0854</a>
-        </div>
-        <div class="stat">
-          <b>Telegram</b>
-          <a href="https://t.me/+27618560854" target="_blank" rel="noopener">Open in Telegram</a>
-          <div class="muted" style="margin-top:6px;font-size:13px">If Telegram link doesn’t open, add <b>+27 61 856 0854</b> in Telegram and message.</div>
+    <section id="contact">
+      <div class="wrap">
+        <div class="card">
+          <h2>Let’s Connect</h2>
+          <p>Choose whatever’s easiest for you:</p>
+          <div class="links" aria-label="Contact options">
+            <a class="link" href="mailto:info@ricardozaal.com" aria-label="Email info@ricardozaal.com">Email <span>info@ricardozaal.com</span></a>
+            <a class="link" href="https://wa.me/27618560854?text=Hi%20Ricardo!" target="_blank" rel="noopener" aria-label="WhatsApp Ricardo">WhatsApp <span>+27 61 856 0854</span></a>
+            <a class="link" href="https://t.me/+27618560854" target="_blank" rel="noopener" aria-label="Open Telegram">Telegram <span>Open in Telegram</span></a>
+            <a class="link" href="mailto:info@ricardozaal.com?subject=Speaking%20or%20Coaching%20Enquiry" aria-label="Speaking or coaching enquiry">Speaking / Coaching <span>Email</span></a>
+          </div>
+          <p style="margin-top:.75rem; font-size:.9rem; color:#9fb1cf;">
+            If the Telegram link doesn’t open, add <strong>+27&nbsp;61&nbsp;856&nbsp;0854</strong> in Telegram and message.
+          </p>
         </div>
       </div>
     </section>
   </main>
 
   <footer>
-    © <span id="y"></span> Ricardo Zaal. All rights reserved.
+    <small>© <span id="y"></span> Ricardo Zaal. All rights reserved. ·
+      <a href="mailto:info@ricardozaal.com">info@ricardozaal.com</a>
+    </small>
   </footer>
 
   <script>
-    // year + smooth scroll
+    // current year in footer
     document.getElementById('y').textContent = new Date().getFullYear();
-    document.querySelectorAll('a[href^="#"]').forEach(a=>{
-      a.addEventListener('click',e=>{
-        const id=a.getAttribute('href').slice(1); const el=document.getElementById(id);
-        if(el){ e.preventDefault(); el.scrollIntoView({behavior:'smooth', block:'start'}); }
-      });
-    });
   </script>
 </body>
 </html>
